client/src/views/UserProfile/UserProfilePage.css
.under-navbar {
  height: 100vh; /* Ensure this container fills the full height */
  display: flex;
  flex-direction: row; /* Align sidebar and content side-by-side */
  overflow: hidden; /* Prevents the page from scrolling when sidebar and content are fixed */
  padding-top: 10px;

}

.sidebar-profilePage{
  position: sticky;
  align-self: flex-start;
  height: calc(100vh - 120px);
  z-index: 500;
  border-right: 1px solid white;
  width: 300px;
  min-width: 300px;
  display: flex;
  flex-direction: column;
  gap: 25px;
  align-items: center;

}

.visible{
  display: flex;
  flex-direction: row;
  gap: 20px;
}
.accountPage-icon{
  width: 55px;
}
.information, 
.posts, 
.friends, 
.follow-button, 
.friendship-button {
  display: inline-flex;
  flex-direction: column;
  justify-content: flex-end;
  width: 200px;
  height: 120px;
  align-items: center;
  padding-bottom: 25px;
  border-radius: 20px;
  border: 5px solid #3059DE;
  background: rgba(247, 255, 226, 0.00);
  cursor: pointer;
  transition: background-color 0.3s ease;
  text-decoration: none;
}

.accountPage-button-text, .follow-button, .friendship-button{
  color: #000;
  font-family: Inter;
  font-size: 30px;
  font-style: normal;
  font-weight: bold;
  line-height: normal;
  margin-bottom: 8px;
  text-decoration: none;
}
.information{
  margin-top: 300px;
}

.information:hover, 
.posts:hover, 
.friends:hover, 
.avatar-edit:hover, 
.follow-button:hover,
.friendship-button:hover{
  background-color: lightyellow;
}

.avatarImage-container {
  display: flex;
  justify-content: center;
  width: 250px;
  height: 250px;
  flex-shrink: 0;
  border-radius: 250px;
  position: relative;
  overflow: visible; /* Ensures content isn't cut off */

}

#avatar{
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  width: 250px;
  height: 250px;
  border-radius: 200px;
  border: 1px solid black;
}
    
.username {
  color: #000;
  font-family: Inter, sans-serif;
  font-size: 40px;
  font-style: normal;
  font-weight: bold;
  line-height: normal;
  line-height: 3;
  position: relative;
  text-align: center;
}



.userProfilePage-content {
  flex-grow: 1; /* Make this take up remaining space */
  display: flex;
  flex-direction: column;
  gap: 30px;
  position: relative;
  align-items: center;
  overflow-y: auto; /* Enable scrolling in the main content area */

}

  
.profileImage {
  display: flex;
  width: 163px;
  height: 155px;
  padding: 5px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  flex-shrink: 0;

  border-radius: 99px;
  border: 1px solid #000;
  background: #B0E0E2;
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);

  position: absolute; /* Enable overlap */
  bottom: -70px; /* Move partially outside the profile-block */
  left: -70px; /* Adjust as needed to control overlap */
}

.profileImage span {
  color: #000;
  font-family: Inter, sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

.avatar-edit {
  width: 70px;
  height: 70px;
  flex-shrink: 0;
  justify-content: center;
  align-items: center;
  display: flex;
  position: absolute; /* Enable overlap */
  background-color: F7FFE2;
  border-radius: 40px;
  margin-top: -50px;
  margin-left: 160px;
  position: absolute; /*Enable overlap */
  z-index: 100;
  background-color: #B0E0E2;


}

.page-content-container{
  display: flex;
  flex-direction: column;
  gap: 30px;
  position: relative;
  align-items: center;
}

.hidden{
  display: none;
}

